terraform/main.tf
provider "aws" {
  region = var.aws_region
}

resource "aws_security_group" "money_tracker_sg" {
  name        = "money-tracker-sg"
  description = "Allow SSH and HTTP"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "money-tracker-sg"
  }
}

resource "aws_instance" "money_tracker" {
  ami           = var.ami_id
  instance_type = var.instance_type
  key_name      = var.key_name
  vpc_security_group_ids = [aws_security_group.money_tracker_sg.id]

  tags = {
    Name = "money-tracker"
  }
}
